manifests/cluster-addons/cnpg/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg
  namespace: cnpg-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cnpg
      app.kubernetes.io/name: cloudnative-pg

  enableDefaultDeny:
    ingress: true
    egress: true

  egress:
    - toEntities:
        - kube-apiserver

    - toEndpoints:
        - matchExpressions:
            - key: 'k8s:io.kubernetes.pod.namespace'
              operator: Exists
            - key: 'k8s:app.kubernetes.io/managed-by'
              operator: In
              values:
                - cloudnative-pg
